# pyzeugkiste

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: pip-check.yml
docs/source/: apidoc-args.rst  apidoc-config.rst  apidoc-geo.rst  apidoc-strings.rst  conf.py  index.rst  installation.rst
docs/source/_static/: dark.css
docs/wzk-parser/: README.md  parse_wzk.py
include/werkzeugkiste-bindings/: config_bindings.h  config_bindings_impl.h  line2d_bindings.h  logging.h  string_bindings.h  vector_bindings.h
include/werkzeugkiste-bindings/detail/: config_bindings_access.h  config_bindings_types.h
pyzeugkiste/: __init__.py
src/: bindings_core.cpp  pyzeugkiste.cpp  pyzeugkiste_core.cpp
src/pyzeugkiste/: __init__.py
src/pyzeugkiste/args/: __init__.py
src/pyzeugkiste/config/: __init__.py
src/pyzeugkiste/files/: __init__.py
src/pyzeugkiste/geo/: __init__.py
src/pyzeugkiste/geometry/: __init__.py
src/pyzeugkiste/notifications/: __init__.py  syslog.py
src/pyzeugkiste/strings/: __init__.py
src/pyzk/config/: __init__.py
src/pyzk/files/: __init__.py
src/pyzk/geo/: __init__.py
tests/: test_args.py  test_config.py  test_config_io.py  test_config_scalars.py  test_config_utils.py  test_lines.py  test_notifications.py  test_package.py  test_strings.py  test_vector.py
