[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pyzeugkiste"
version = "0.2.0"
description="Python bindings for werkzeugkiste + additional helpers."
readme = "README.md"
authors = [
  { name = "snototter", email = "snototter@users.noreply.github.com" },
]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.7.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pre-commit"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
#test-skip = ["*universal2:arm64"]
build-verbosity = 1

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
