[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pyzk"
version = "0.2.0"
description="PyZeugKiste: Python bindings for werkzeugkiste & additional python-only helpers."
readme = "README.md"
authors = [
  { name = "snototter", email = "snototter@users.noreply.github.com" },
]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.7.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pre-commit"]


[tool.scikit-build]
# See param description at https://pypi.org/project/scikit-build-core/
cmake.minimum-version = "3.15"
ninja.minimum-version = "1.5"
ninja.make-fallback = true

cmake.args = []
cmake.verbose = false
cmake.build-type = "Release"
logging.level = "WARNING"

sdist.include = []
sdist.exclude = []

wheel.packages = ["src/pyzk"]

# Setting this to true will expand tags (universal2 will add Intel and Apple
# Silicon tags, for pip <21.0.1 compatibility).
wheel.expand-macos-universal-tags = true



[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
#test-skip = ["*universal2:arm64"]
build-verbosity = 1

#todo see best practices to determine which extras have been configured: https://stackoverflow.com/a/52475030/400948

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
